// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Driver formatConfig() formats to JS if config ends in .js 1`] = `
"module.exports = {
  \\"foo\\": 123,
  \\"bar\\": \\"abc\\",
  \\"baz\\": true
};"
`;

exports[`Driver formatConfig() formats to JSON if config ends in .json 1`] = `
"{
  \\"foo\\": 123,
  \\"bar\\": \\"abc\\",
  \\"baz\\": true
}"
`;

exports[`Driver setMetadata() bin doesnt support underscores 1`] = `
"The following validations have failed for \`TestDriver\`:
  - Invalid field \\"bin\\". String does not match. (pattern \\"^[a-z]{1}[a-zA-Z0-9-]+$\\")"
`;

exports[`Driver setMetadata() bin doesnt support uppercase 1`] = `
"The following validations have failed for \`TestDriver\`:
  - Invalid field \\"bin\\". String does not match. (pattern \\"^[a-z]{1}[a-zA-Z0-9-]+$\\")"
`;

exports[`Driver setMetadata() bin is required 1`] = `
"The following validations have failed for \`TestDriver\`:
  - Invalid field \\"bin\\". Field is required and must be defined.
  - Invalid field \\"configName\\". Field is required and must be defined.
  - Invalid field \\"title\\". Field is required and must be defined."
`;

exports[`Driver setMetadata() command options doesnt support description as other types 1`] = `
"The following validations have failed for \`TestDriver\`:
  - Invalid field \\"foo\\".
    - Invalid field \\"description\\". Must be a string, received number.
    - Invalid field \\"type\\". String must be one of: string, number, boolean. Received \\"\\"."
`;

exports[`Driver setMetadata() command options requires a description 1`] = `
"The following validations have failed for \`TestDriver\`:
  - Invalid field \\"foo\\".
    - Invalid field \\"description\\". Field is required and must be defined.
    - Invalid field \\"type\\". String must be one of: string, number, boolean. Received \\"\\"."
`;

exports[`Driver setMetadata() configName doesnt support non-strings 1`] = `
"The following validations have failed for \`TestDriver\`:
  - Invalid field \\"configName\\". Must be a string, received number."
`;

exports[`Driver setMetadata() configName is required 1`] = `
"The following validations have failed for \`TestDriver\`:
  - Invalid field \\"configName\\". Field is required and must be defined.
  - Invalid field \\"title\\". Field is required and must be defined."
`;

exports[`Driver setMetadata() title doesnt support non-strings 1`] = `
"The following validations have failed for \`TestDriver\`:
  - Invalid field \\"title\\". Must be a string, received number."
`;

exports[`Driver setMetadata() title is required 1`] = `
"The following validations have failed for \`TestDriver\`:
  - Invalid field \\"title\\". Field is required and must be defined."
`;

exports[`Driver validates fields 1`] = `
"The following validations have failed for \`Driver\`:
  - Invalid field \\"args\\". Must be an array, received boolean."
`;
